--- a/index.html
+++ b/index.html
@@ -4,22 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="./js/script.js"></script>
     <title>Katik Persegi</title>
 </head>
 <body>
     <header>
-        <h1>Kalkulator Luas dan Keliling Persegi</h1>
-        <h4>Welcome to Kalkulator Luas dan Keliling Persegi</h4>
-        <p>Web ini digunakan untuk menghitung luas dan keliling persegi dalam rangka menyelesaikan mini project Revou</p>
+        <h1>KALPER</h1>
+        <h2>Kalkulator Luas dan Keliling Persegi</h2>
+        </table>
+        <h4>Selamat datang di KALPER</h4>
+        <p>Ini adalah web sederhana untuk menghitung luas dan keliling persegi</p>
     </header>
 
-    <div class="inputSection">
-        <label for="squareSide" id="lblSquareSide">Hitung Luas Persegi</label>
-        <input type="number" id="squareSide">
+    <div class="luasPersegi">
+        <p id="titleLuas">LUAS PERSEGI</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/Persegi.png" alt="square" class="squareImg">
+        <p>Rumus luas persegi yaitu:</p>
+        <p class="formula" id="luasFormula">L = S x S</p>
+        <p>di mana:</p>
+        <p>L = luas persegi</p>
+        <p>S = panjang sisi persegi</p>
+        <div class="inputSection">
+            <label for="squareSide" id="lblSquareSide">Hitung Luas Persegi</label>
+            <input type="number" id="squareSide" placeholder="panjang sisi (dalam angka)">
+        </div>
+        <div class="buttons">
+            <button id="buttonLuas" onclick="luasPersegi()">Hitung</button>
+            <button id="resetLuas">Reset</button>
+        </div>
     </div>
-    <div class="buttons">
-        <button class="katikButton">Hitung</button>
-        <button class="katikButton">Reset</button>
+
+    <div class="kelilingPersegi">
+        <p id="titleKeliling">KELILING PERSEGI</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/Persegi.png" alt="square" class="squareImg">
+        <p>Rumus keliling persegi yaitu:</p>
+        <p class="formula" id="kelilingFormula">L = 4 x S</p>
+        <p>di mana:</p>
+        <p>L = luas persegi</p>
+        <p>S = panjang sisi persegi</p>
+        <div class="inputSection">
+            <label for="squareSide" id="lblSquareSide">Hitung Keliling Persegi</label>
+            <input type="number" id="squareSide" placeholder="panjang sisi (dalam angka)">
+        </div>
+        <div class="buttons">
+            <button id="buttonKeliling">Hitung</button>
+            <button id="resetKeliling">Reset</button>
+        </div>
     </div>
 </body>
 </html>
