--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <input type="number" id="squareSide" placeholder="panjang sisi (dalam angka dan lebih dari 0)">
         </div>
         <div class="buttons">
-            <button id="buttonLuas" onclick="luasPersegi()">Hitung</button>
-            <button id="resetLuas" onclick="resetLuas()">Reset</button>
+            <button class="buttonL" id="buttonLuas" onclick="luasPersegi()">Hitung</button>
+            <button class="buttonL" id="resetLuas" onclick="resetLuas()">Reset</button>
         </div>
         <p id="hasilLuas1"></p>
         <p id="hasilLuas2"></p>
@@ -49,8 +49,8 @@
             <input type="number" id="sisiKeliling" placeholder="panjang sisi (dalam angka dan lebih dari 0)">
         </div>
         <div class="buttons">
-            <button id="buttonKeliling" onclick="kelilingPersegi()">Hitung</button>
-            <button id="resetKeliling" onclick="resetKeliling()">Reset</button>
+            <button class="buttonK" id="buttonKeliling" onclick="kelilingPersegi()">Hitung</button>
+            <button class="buttonK" id="resetKeliling" onclick="resetKeliling()">Reset</button>
         </div>
         <p id="hasilKeliling1"></p>
         <p id="hasilKeliling2"></p>
